ios/chrome/browser/ui/toolbar/buttons/toolbar_tools_menu_button.mm
@@ -100,6 +100,8 @@ const CGFloat kStrokeEndAtApogee = 1;
                 forState:UIControlStateNormal];
       [self setTintColor:toolbar::HighlighButtonTint(style_)
                 forState:UIControlStateHighlighted];
+    } else {
+      [self configureSpotlightView];
     }
   }
   return self;
